--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>허민영</title>
+
+    <mata property="og:title" content="안녕하세요. 허민영입니다.">
+        <mata property="og:description" content="허민영입니다.">
+            <mata property="og:image" content="./src/images/headal_meta.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
@@ -12,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico"/>
 </head>
 
 <body style="overflow-x: hidden">
